# docker-hoster

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cli.py  docker-compose.dev.yaml  pyproject.toml  tox.ini
src/docker_hoster/: __init__.py  __main__.py  hoster.py
tests/: __init__.py  conftest.py  test_classes.py
tests/dind/: Dockerfile
tests/dind/root/tmp/: hosts
